add example for printing without explicitly writing "System.out" in "no-more-boilerplate main methods" in java 23 (still preview)